--- a/html/introduction-to-html/getting-started/index.html
+++ b/html/introduction-to-html/getting-started/index.html
@@ -6,6 +6,33 @@
     <title>My test page</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <form action="/my-handling-form-page" method="post">
+                <ul>
+                    
+                  <li>
+                    <label for="name">Name:</label>
+                    <input type="text" value="" id="name" name="user_name" />
+                  </li>
+
+                  <li>
+                    <label for="mail">Email:</label>
+                    <input type="email" value="" id="mail" name="user_email" />
+                  </li>
+
+                  <li>
+                    <label for="msg">Message:</label>
+                    <textarea id="msg" name="user_message"></textarea>
+                  </li>
+
+                  <li class="button">
+                    <button type="submit">Send your message</button>
+                  </li>
+
+                  <li class="button">
+                    <button type="reset">Reset :D</button>
+                  </li>
+
+                </ul>
+            </form>
   </body>
 </html>
